<resources>
    <string name="app_name">Stellar Leap Scorepad</string>

    <!--WelcomeActivity -->
    <string name="score_game">Score game!</string>
    <string name="about">About</string>
    <string name="game_logs">Game Logs</string>

    <!--AboutActivity-->
    <string name="about_weird_giraffe">About Weird Giraffe Games</string>
    <string name="about_weird_giraffe_text">We are two engineers and a cat based in Huntsville, Alabama! We are dedicated to creating engaging games focused on player choices and layered with strategy. For more information visit WeirdGiraffeGames.com.</string>
    <string name="stellar_leap_url">http://weirdgiraffegames.com/stellar-leap.html</string>
    <string name="weird_giraffe_url">http://weirdgiraffegames.com/</string>
    <string name="see_rules">Stellar Leap</string>
    <string name="about_stellar_leap_text">Stellar Leap is a space exploration game for 1-5 players and plays in about an hour with resource management, variable player powers, hidden objectives, and game changing events! \n
    \n Earn prestige by completing missions, discovering new planets, increasing population, and fulfilling your hidden objective. Variable player powers and game-changing events mean that every game is as different as the planets in our galaxy!
        \n \n Visit Weirdgiraffegames.com to learn more.</string>

    <!--ChooseRacesActivity-->
    <string name="select_races">Select Race(s)</string>
    <string name="tuskadon">Tuskadon</string>
    <string name="starlings">Starlings</string>
    <string name="cosmosaurus">Cosmosaurus</string>
    <string name="scoutars">Scoutars</string>
    <string name="araklith">Araklith</string>
    <string name="next">Next</string>

    <string name="must_select_one">At least one species must be selected.</string>

    <string name="selected_species_key">selectedSpeciesKey</string>
    <string name="game_id_key">gameIdKey</string>


    <!--GameLogActivity-->
    <string name="comes_from_game_log_activity_key">comesFromGameLogActivityKey</string>
    <string name="date">Date:</string>
    <string name="no_game_logs_yet">Nothing to see here yet. Play and score a game!</string>

    <!--InputPointsActivity-->
    <string name="comes_from_final_score_activity_key">comesFromFinalScoreActivityKey</string>
    <string name="continue_back">Continue</string>
    <string name="continue_back_dialog_msg">Are you sure you want to go back? You will lose any entered score data.</string>

    <string name="tuskadon_points">Tuskadon Points</string>
    <string name="starling_points">Starling Points</string>
    <string name="cosmosaurus_points">Cosmosaurus Points</string>
    <string name="scoutars_points">Scoutars Points</string>
    <string name="araklith_points">Araklith Points</string>
    <string name="points">Points</string>
    <string name="missions">Missions</string>
    <string name="player_board">Player Board</string>
    <string name="trait">Trait</string>
    <string name="resources">Resources</string>
    <string name="select_trait">Select Trait:</string>

    <string name="see_totals">See Totals</string>
    <string name="done">Done</string>

    <string name="validation_toast">All fields must be completed to proceed.</string>
    <string name="sample_trait_instructions">Gain either 3 VP for every unique resource that you have 6 or more of OR gain 5 VP for every unique resource that you have 10 or more of.</string>
    <string name="layout_index_key">layoutIndexKey</string>

    <!--Traits-->
    <string name="adventurer">Adventurer</string>
    <string name="aggressor">Aggressor</string>
    <string name="completionist">Completionist</string>
    <string name="dedicated_column">Dedicated (Column)</string>
    <string name="dedicated_row">Dedicated (Row)</string>
    <string name="expansionist">Expansionist</string>
    <string name="explorer">Explorer</string>
    <string name="friendly">Friendly</string>
    <string name="harmless">Harmless</string>
    <string name="heroic">Heroic</string>
    <string name="loner1">Loner 3P+</string>
    <string name="loner2">Loner 2P</string>
    <string name="mathematician">Mathematician</string>
    <string name="popular">Popular</string>
    <string name="resourceful1">Resourceful 3P+</string>
    <string name="resourceful2">Resourceful 2P</string>
    <string name="risky">Risky</string>
    <string name="solar_explorer">Solar Explorer</string>
    <string name="warmonger">Warmonger</string>


    <!--Trait instructions-->
    <string name="adventurer_trait_instructions">Gain 25 points if no player has more discoveries than you.</string>
    <string name="aggressor_trait_instructions">Gain 25 points if no player has attacked more than you have.</string>
    <string name="completionist_trait_instructions">Gain 25 points if no player has competed more missions than you have.</string>
    <string name="dedicated_column_trait_instructions">Choose a planet column, gain 2 points per your population on a planet  on that column, plus 3 for every planet or asteroid in that column. </string>
    <string name="dedicated_row_trait_instructions">Choose a planet row, gain 2 points per your population on a planet  on that row, plus 3 for every planet or asteroid in that row. </string>
    <string name="expansionist_trait_instructions">Gain 3VP for every population you have on a different planet at the end of the game.</string>
    <string name="explorer_trait_instructions">Gain 3VP for every planet you discover.</string>
    <string name="friendly_trait_instructions">Gain 4VP for population on a planet that has another player\'s population on it.</string>
    <string name="harmless_trait_instructions">Gain 3VP for every one of your  populations on a safe planet.</string>
    <string name="heroic_trait_instructions">Gain 5VP for every mission completed.</string>
    <string name="loner1_trait_instructions">Gain 8VP for every one of your population on a planet that doesn\'t have another player\'s population on it.</string>
    <string name="loner2_trait_instructions">Gain 6VP for every one of your population on a planet that doesn\'t have another player\'s population on it.</string>
    <string name="mathematician_trait_instructions">Gain 3VP for every population you have on a different row and column at the end of the game.</string>
    <string name="popular_trait_instructions">Gain 3VP for every population you have.</string>
    <string name="resourceful1_trait_instructions">Gain either 3 VP for every unique resource that you have 10 or more of OR gain 5 VP for every unique resource that you have 15 or more of.</string>
    <string name="resourceful2_trait_instructions">Gain either 3 VP for every unique resource that you have 6 or more of OR gain 5 VP for every unique resource that you have 10 or more of.</string>
    <string name="risky_trait_instructions">Gain 6VP for every one of your  populations on a dangerous planet.</string>
    <string name="solar_explorer_trait_instructions">Choose a Solar System, gain 5 points per your discovery in that solar system.</string>
    <string name="warmonger_trait_instructions">Gain 3VP for every successful attack.</string>

    <!--Trait resource instructions
    <string name="every_three_resources">Gain 1VP for every three of your resources.</string>
    <string name="every_four_resources">Gain 1VP for every four of your resources.</string>
    -->
    <string name="every_three_resources">Enter the number of resources you have. You will gain 1 VP for every 3 of your resources.</string>
    <string name="every_four_resources">Enter the number of resources you have. You will gain 1 VP for every 4 of your resources.</string>
    <string name="points_from_resources">Points from resources:</string>

    <!--FinalScoreActivity-->
    <string name="total">Total</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this game log?</string>
    <string name="delete">Delete</string>
    <string name="new_game">New game</string>
    <string name="cancel">cancel</string>
</resources>
