<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star_background_temp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.weirdgiraffegames.stellarleapscorepad.GameLogActivity">

        <com.weirdgiraffegames.stellarleapscorepad.util.PrototypeFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/standarMargin"
            android:text="@string/game_logs"
            android:background="@color/semi_transparent_black"
            android:textColor="@color/text_blue"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/semi_transparent_black"
            android:layout_marginTop="@dimen/standarMargin"
            android:orientation="horizontal">

            <com.weirdgiraffegames.stellarleapscorepad.util.PrototypeFontTextView
                style="@style/GameLogHeader"
                android:text="@string/date" />

            <com.weirdgiraffegames.stellarleapscorepad.util.PrototypeFontTextView
                style="@style/GameLogHeader"
                android:text="@string/tuskadon" />

            <com.weirdgiraffegames.stellarleapscorepad.util.PrototypeFontTextView
                style="@style/GameLogHeader"
                android:text="@string/starlings" />

            <com.weirdgiraffegames.stellarleapscorepad.util.PrototypeFontTextView
                style="@style/GameLogHeader"
                android:text="@string/cosmosaurus" />

            <com.weirdgiraffegames.stellarleapscorepad.util.PrototypeFontTextView
                style="@style/GameLogHeader"
                android:text="@string/scoutars" />

            <com.weirdgiraffegames.stellarleapscorepad.util.PrototypeFontTextView
                style="@style/GameLogHeader"
                android:text="@string/araklith" />

        </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/all_game_logs_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standarMargin" />

</LinearLayout>
