<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/star_background_temp_vertical"
    tools:context="com.weirdgiraffegames.stellarleapscorepad.WelcomeScreenActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/standarMargin"
        android:src="@drawable/stellar_leap_logo"/>

    <Button
        android:id="@+id/score_new_game_btn"
        android:layout_marginTop="@dimen/standarMargin"
        android:background="@drawable/button_background"
        android:paddingLeft="@dimen/standarMargin"
        android:paddingRight="@dimen/standarMargin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/nebula_very_light_blue"
        android:textSize="16sp"
        android:text="@string/score_game" />

    <Button
        android:id="@+id/about_app_btn"
        android:layout_marginTop="@dimen/standarMargin"
        android:background="@drawable/button_background"
        android:paddingLeft="@dimen/standarMargin"
        android:paddingRight="@dimen/standarMargin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/nebula_very_light_blue"
        android:textSize="16sp"
        android:text="@string/about" />

    <Button
        android:id="@+id/game_log_btn"
        android:layout_marginTop="@dimen/standarMargin"
        android:background="@drawable/button_background"
        android:paddingLeft="@dimen/standarMargin"
        android:paddingRight="@dimen/standarMargin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/nebula_very_light_blue"
        android:textSize="16sp"
        android:text="@string/game_logs" />

</LinearLayout>
